--- a/style.css
+++ b/style.css
@@ -1,21 +1,76 @@
 body {
   background-color: #757177;
+  box-sizing: border-box;
 }
 
-.cards {
+#cards {
   display: flex;
+  flex-wrap: wrap;
+  box-sizing: content-box;
+  justify-content: center;
+  border: solid black;
+}
+
+.card {
+  margin: 20px;
+  padding: 20px;
+  box-sizing: border-box;
+  border-radius: 10%;
+}
+
+.card:hover {
+  box-sizing: border-box;
+  box-shadow: 0px 0px 15px #363636;
+  transition: 0.5s;
+}
+
+.img {
+  border-radius: 0%;
+}
+
+.nav {
+  display: flex;
+  background-color: #5c9794;
+  padding: 20px;
+  box-shadow: 0px 0px 15px #568a87;
   border-radius: 10px;
+  box-sizing: border-box;
+  justify-content: flex-end;
 }
-.cards .card {
-  width: 200px;
-  border: 1px solid white;
+
+.nav-int {
+  display: flex;
+  transition: 1s;
 }
-.cards .card .tarjeta-principal {
-  background-color: #1f1e1e;
+
+.nav-links {
+  display: flex;
+  padding: 5px 10px;
+  margin: 10px 10px;
+  text-decoration: none;
+  color: black;
 }
-.cards .card .tarjeta-principal h1 {
-  font-size: 20px;
-  color: #757177;
+
+table,
+th,
+td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+.cardFull {
+  display: flex;
+  margin: 20px;
+  padding: 20px;
+  box-sizing: border-box;
+  border-radius: 10%;
+  align-items: center;
+}
+
+.cardFull:hover {
+  box-sizing: border-box;
+  box-shadow: 0px 0px 15px #363636;
+  transition: 0.5s;
 }
 
 /*# sourceMappingURL=style.css.map */
