--- a/styles/style.css
+++ b/styles/style.css
@@ -1,27 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dongle&display=swap");
-* {
-  font-family: "Bebas Neue", "cursive";
-}
-
-main {
-  box-sizing: border-box;
-  background-color: #1b1b1b;
-  color: #bdbdbd;
-  border-radius: 2%;
-  box-shadow: 0px 0px 15px #383838;
-}
-
-nav {
-  background-color: #538157;
-  margin-bottom: 10px;
-}
-
-#cards {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
 .card {
   margin: 20px;
   padding: 20px;
@@ -31,35 +8,33 @@ nav {
   margin-bottom: 10px;
 }
 
-.card:hover {
+/* Buttons mixin */
+/*Flex Mixin*/
+/*Hover Mixin*/
+* {
+  font-family: "Bebas Neue", "cursive";
+}
+
+/* Main Part */
+main {
   box-sizing: border-box;
-  box-shadow: 0px 0px 15px #bdbdbd;
-  transition: 0.5s;
-  color: #1b1b1b;
-  background-image: url("https://i.pinimg.com/564x/3d/cb/4e/3dcb4e5fc28d47608361e71bf26826f5.jpg");
-}
-
-.img {
-  border-radius: 50%;
-}
-
-.icon-container {
-  height: 50px;
-  width: auto;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-  background-color: #538157;
-  border-radius: 10px;
+  background-color: #1b1b1b;
+  color: #bdbdbd;
+  border-radius: 2%;
   box-shadow: 0px 0px 15px #383838;
 }
 
-.icon {
-  width: 10%;
+/*Navigator */
+nav {
+  display: flex;
+  justify-content: space-between;
+  border-radius: 10px;
+  box-shadow: 0px 0px 15px #383838;
+  background-color: #538157;
+  margin-bottom: 10px;
 }
 
+/*Intern Navigation */
 .nav-int {
   display: flex;
   justify-content: center;
@@ -71,30 +46,14 @@ nav {
   margin-top: 10px;
 }
 
-label {
-  font-size: 20px;
-}
-
-input {
-  border-radius: 10px;
-  margin: 20px;
-  padding: 10px;
-}
-
-.nav-button {
+/* Princial Cards Container */
+#cards {
   display: flex;
   justify-content: center;
-  font-size: 17px;
-  margin: 10px 10px;
-  text-decoration: none;
+  flex-wrap: wrap;
 }
 
-.nav-button:hover {
-  transition: 0.5;
-  background-image: url("https://i.pinimg.com/564x/3d/cb/4e/3dcb4e5fc28d47608361e71bf26826f5.jpg");
-  color: #1b1b1b;
-}
-
+/* Details Cards Container */
 .container-details {
   display: flex;
   justify-content: center;
@@ -107,7 +66,8 @@ input {
   top: 0;
 }
 
-.cardFull {
+/* Card Details*/
+.card-details {
   margin: 20px;
   padding: 20px;
   box-sizing: border-box;
@@ -117,28 +77,80 @@ input {
   transition: 1s;
 }
 
-.cardFull:hover {
-  box-sizing: border-box;
-  box-shadow: 0px 0px 15px #bdbdbd;
-  color: #1b1b1b;
-  transition: 0.5s;
+.card-details-info h2 {
+  font-size: 40px;
+}
+.card-details-info p {
+  font-size: 20px;
 }
 
-.cardOfcards {
-  margin: 20px;
-}
-
+/* Buttons for the all page */
 button {
   border: none;
   border-radius: 5px;
   background-color: #538157;
   color: #1b1b1b;
+  font-size: 20px;
+  padding: 20px;
+  margin: 10px;
 }
 
+/* Close button for the details card */
 .close {
   position: absolute;
   display: block;
-  background-color: #58b160;
+  margin: 5px;
+  padding: 5px;
+  background-image: url("https://i.pinimg.com/564x/3d/cb/4e/3dcb4e5fc28d47608361e71bf26826f5.jpg");
 }
+
+/* HOVERS */
+.card:hover {
+  transition: 0.5s;
+  color: #1b1b1b;
+  box-sizing: border-box;
+  box-shadow: 0px 0px 15px #bdbdbd;
+  background-image: url("https://i.pinimg.com/564x/3d/cb/4e/3dcb4e5fc28d47608361e71bf26826f5.jpg");
+}
+
+.card-details:hover {
+  transition: 0.5s;
+  color: #1b1b1b;
+  box-sizing: border-box;
+  box-shadow: 0px 0px 15px #bdbdbd;
+}
+
+button:hover {
+  transition: 0.5s;
+  color: #1b1b1b;
+  background-image: url("https://i.pinimg.com/564x/3d/cb/4e/3dcb4e5fc28d47608361e71bf26826f5.jpg");
+}
+
+/*Specifications icons */
+.icon-container {
+  height: 50px;
+  width: auto;
+}
+
+.icon {
+  width: 10%;
+}
+
+/*Specifications forms */
+label {
+  font-size: 20px;
+}
+
+input {
+  border-radius: 10px;
+  margin: 20px;
+  padding: 10px;
+}
+
+.img {
+  border-radius: 50%;
+}
+
+/* Responsive*/
 
 /*# sourceMappingURL=style.css.map */
