--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,77 +1,30 @@
-$color-principal: #343738;
-$color-secundario: #538157;
-$tipografia-principal: "Bebas Neue", "cursive";
+@import "variables";
+@import "components";
+@import "mixies";
 * {
-  font-family: $tipografia-principal;
+  font-family: $principal-typography;
 }
-// para poner la tipografia que quiera  y recien ahi ponems el nombre de la que queremos
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dongle&display=swap");
+
+/* Main Part */
 main {
   box-sizing: border-box;
-
-  background-color: #1b1b1b;
-  color: #bdbdbd;
+  background-color: $principial-colour;
+  color: $typography-color;
   border-radius: 2%;
   box-shadow: 0px 0px 15px #383838;
-
-  // background-image: url("https://www.freepnglogos.com/uploads/rick-and-morty-png/rick-and-morty-portal-moon-mod-download-35.png");
 }
+
+/*Navigator */
 nav {
-  background-color: $color-secundario;
-  margin-bottom: 10px;
-}
-
-@mixin buttons {
-  border: none;
-}
-
-@mixin flex($content: center) {
-  display: flex;
-  justify-content: $content;
-}
-
-#cards {
-  @include flex($content: center);
-  flex-wrap: wrap;
-}
-.card {
-  margin: 20px;
-  padding: 20px;
-  box-sizing: border-box;
-  justify-content: center;
-  border-radius: 10%;
-  margin-bottom: 10px;
-}
-
-.card:hover {
-  box-sizing: border-box;
-  box-shadow: 0px 0px 15px #bdbdbd;
-  transition: 0.5s;
-  color: #1b1b1b;
-  // background-color: $color-secundario;
-  background-image: url("https://i.pinimg.com/564x/3d/cb/4e/3dcb4e5fc28d47608361e71bf26826f5.jpg");
-}
-.img {
-  border-radius: 50%;
-}
-.icon-container {
-  height: 50px;
-  width: auto;
-}
-
-// .img:hover {
-//   border: solid black;
-//   box-sizing: border-box;
-// }
-.nav {
   @include flex($content: space-between);
-  background-color: $color-secundario;
   border-radius: 10px;
   box-shadow: 0px 0px 15px #383838;
+  background-color: $secondary-color;
+  margin-bottom: 10px;
 }
-.icon {
-  width: 10%;
-}
+/*Intern Navigation */
+
 .nav-int {
   @include flex();
   align-items: center;
@@ -81,27 +34,13 @@ nav {
   box-shadow: 0px 0px 15px #383838;
   margin-top: 10px;
 }
-label {
-  font-size: 20px;
-}
-input {
-  border-radius: 10px;
-  margin: 20px;
-  padding: 10px;
-}
-.nav-button {
-  @include flex();
-  font-size: 17px;
-  margin: 10px 10px;
-  text-decoration: none;
-}
 
-.nav-button:hover {
-  transition: 0.5;
-  background-image: url("https://i.pinimg.com/564x/3d/cb/4e/3dcb4e5fc28d47608361e71bf26826f5.jpg");
-  color: #1b1b1b;
+/* Princial Cards Container */
+#cards {
+  @include flex($content: center);
+  flex-wrap: wrap;
 }
-
+/* Details Cards Container */
 .container-details {
   @include flex($content: center);
   position: fixed;
@@ -113,55 +52,90 @@ input {
   top: 0;
 }
 
-.cardFull {
-  // @include flex($content: center);
+/* Card Details*/
+.card-details {
   margin: 20px;
   padding: 20px;
   box-sizing: border-box;
   border-radius: 10%;
-  background-image: url("https://i.pinimg.com/564x/3d/cb/4e/3dcb4e5fc28d47608361e71bf26826f5.jpg");
-  color: #1b1b1b;
+  background-image: $principal-background;
+  color: $principial-colour;
   transition: 1s;
 }
 
-.cardFull:hover {
-  box-sizing: border-box;
-  box-shadow: 0px 0px 15px #bdbdbd;
-  color: #1b1b1b;
-
-  transition: 0.5s;
+.card-details-info {
+  h2 {
+    font-size: 40px;
+  }
+  p {
+    font-size: 20px;
+  }
 }
-.cardOfcards {
-  margin: 20px;
-}
-
+/* Buttons for the all page */
 button {
   @include buttons();
   border-radius: 5px;
-  background-color: #538157;
-  color: #1b1b1b;
+  background-color: $secondary-color;
+  color: $principial-colour;
+  font-size: 20px;
+  padding: 20px;
+  margin: 10px;
 }
 
+/* Close button for the details card */
 .close {
   position: absolute;
   display: block;
-
-  background-color: #58b160;
+  margin: 5px;
+  padding: 5px;
+  background-image: $principal-background;
 }
-// .section-details:target {
-//   // @include flex($content: center);
-//   position: absolute;
-// }
 
-// .nav-links:active {
-//   border: solid rgb(173, 173, 173);
-//   color: #bbb4c2;
-// }
+/* HOVERS */
+.card:hover {
+  @include hover;
+  box-sizing: border-box;
+  box-shadow: 0px 0px 15px #bdbdbd;
+  background-image: $principal-background;
+}
 
-// .nav-links:hover {
-//   color: #bbb4c2;
-// }
+.card-details:hover {
+  @include hover;
+  box-sizing: border-box;
+  box-shadow: 0px 0px 15px #bdbdbd;
+}
 
+button:hover {
+  @include hover;
+  background-image: $principal-background;
+}
+
+/*Specifications icons */
+.icon-container {
+  height: 50px;
+  width: auto;
+}
+.icon {
+  width: 10%;
+}
+
+/*Specifications forms */
+
+label {
+  font-size: 20px;
+}
+
+input {
+  border-radius: 10px;
+  margin: 20px;
+  padding: 10px;
+}
+
+.img {
+  border-radius: 50%;
+}
+
+/* Responsive*/
 @media (min-width: 576px) {
 }
 
