--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,7 @@ nav {
   box-shadow: 0px 0px 15px #383838;
   background-color: #538157;
   margin-bottom: 10px;
+  align-items: center;
 }
 
 /*Intern Navigation */
@@ -152,5 +153,10 @@ input {
 }
 
 /* Responsive*/
+@media (min-width: 576px) {
+  nav {
+    align-items: center;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
