--- a/styles/style.scss
+++ b/styles/style.scss
@@ -22,6 +22,7 @@ nav {
   box-shadow: 0px 0px 15px #383838;
   background-color: $secondary-color;
   margin-bottom: 10px;
+  align-items: center;
 }
 /*Intern Navigation */
 
@@ -137,6 +138,9 @@ input {
 
 /* Responsive*/
 @media (min-width: 576px) {
+  nav {
+    align-items: center;
+  }
 }
 
 @media (min-width: 768px) {
