--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,3 +1,5 @@
+// deberia ser principal, no principial. Estos errores son pequeños cuando
+// trabajamos solas, pero impactan muy negativamente al trabajar en grupo. 
 $principial-colour: #1b1b1b;
 $secondary-color: #538157;
 $typography-color: #bdbdbd;
